--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-window": "^1.8.5",
     "spotify-web-api-js": "^1.2.0"
   },
   "scripts": {
