--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": "13.12.0"
+  },
   "devDependencies": {
     "node-sass": "^4.13.1"
   }
